# mcp-math-server

./: .gitignore  README.md  app.py  client.py  launcher.py  main.py  pyproject.toml  render.yaml  requirements.txt  server.py  test_flow.py
tools/: __init__.py  browser_tools.py  email_tools.py  expense_tools.py  github_tools.py  notes_tools.py  weather_tools.py
