[project]
name = "yt-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.4",
    "langchain>=1.3.14",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "py-dotenv>=0.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
