[project]
name = "yt-client"
version = "0.2.0"
description = "Personal Assistant — FastMCP + LangChain + Groq (Weather, Notes, Email, Expenses, Browser, GitHub)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.4",
    "langchain>=1.3.14",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "python-dotenv>=1.2.2",
    "nest-asyncio>=1.6.0",
    "streamlit>=1.59.2",
    "groq",
    "requests>=2.32.0",
    "fpdf2>=2.8.0",
    "duckduckgo-search>=7.0.0",
]
